Fix - profile not showing, email id and contact readonly
Fix - profile not showing, email id and contact readonly

--- a/src/styles/Components/_form.scss
+++ b/src/styles/Components/_form.scss
@@ -52,4 +52,7 @@ textarea {
     font-weight: 300;
     padding: $small;
   }
+  textarea {
+    height: 100px;
+  }
 }
